--- a/slideshow-server/Makefile
+++ b/slideshow-server/Makefile
@@ -2,7 +2,7 @@
 ## slideshow-server/Makefile
 #################################################
 
-.PHONY: all build clean dist install example-demo prebuild test
+.PHONY: all build clean dist install example-demo prebuild test vendor-libdmotservices
 
 # build prerequisites
 VERSION := $(strip $(shell cat VERSION))
@@ -14,18 +14,26 @@ DIST_DIR    := $(ROOT)/dist
 BUILD_DIR   := $(ROOT)/build
 DIST_NAME   := slideshow-server-$(VERSION)
 DIST_STAGE  := $(DIST_DIR)/$(DIST_NAME)
+LIBDMOTSERVICES_ROOT ?= $(ROOT)/../libdmotservices/python
 
 # commands
 MILESTONE    := echo === 
 PYTHON       ?= python3
 TEST_CMD     ?= $(PYTHON) -m pytest -svv
 
+# pip is blocked on some managed hosts, so we vendor libdmotservices instead.
+export PYTHONPATH := $(LIBDMOTSERVICES_ROOT):$(LIBDMOTSERVICES_ROOT)/vendor:$(PYTHONPATH)
+
+vendor-libdmotservices:
+	@$(MILESTONE) "Vendoring libdmotservices for slideshow-server"
+	@$(MAKE) -C "$(LIBDMOTSERVICES_ROOT)" vendor
+
 #####################################################################################
 ## Default build
 #####################################################################################
 all: prebuild build
 
-prebuild:
+prebuild: vendor-libdmotservices
 	@cat slideshow-server.logo
 	@cp -v VERSION slideshow_server/.version
 
@@ -67,6 +75,8 @@ test:
 dist: clean build
 	@$(MILESTONE) "Packaging slideshow-server $(VERSION)"
 	@mkdir -p "$(DIST_STAGE)"
+	@mkdir -p "$(DIST_STAGE)/vendor"
+	@cp -Rv "$(LIBDMOTSERVICES_ROOT)/vendor/libdmotservices" "$(DIST_STAGE)/vendor/"
 	@cp -v README.md run-demo.sh slideshow-server.py slideshow-server.css \
 		slideshow-server.html slideshow-server.js VERSION "$(DIST_STAGE)"/
 	@cp -Rv slideshow_server "$(DIST_STAGE)"/
