libdmotservices.js lib started; pkixwebadmin certificate drag-n-drop Bootstrap UI without backend; JS linting; unit tests; documentation; package files allowed in repo

--- a/libdmotservices/.gitignore
+++ b/libdmotservices/.gitignore
@@ -57,6 +57,9 @@ build/
 **/connection*.properties
 **/Thumbs.db*
 python/vendor
+js/dist/
+js/vendor/
+js/node_modules/
 build.bat
 build.cmd
 build.ps1
