--- a/libdmotservices/java/build.xml
+++ b/libdmotservices/java/build.xml
@@ -1,41 +1,50 @@
 <project name="libdmotservices" default="dist" basedir=".">
     <description>
-        Builds libdmotservices.
+        Builds libdmotservices (Java).
     </description>
     <!-- default values; can be overridden with -D on the command line -->
     <loadfile property="libdmotservices.version" srcFile="../VERSION" />
-    <property name="project.java.home" location="/usr/lib/jvm/java-17-openjdk-amd64"/>
-    <property name="build" location="build"/>
-    <property name="dep" location="dep"/>
-    <property name="mvn" location="mvn"/>
+    <property name="project.java.home" location="/usr/lib/jvm/java-17-openjdk-amd64" />
+    <property name="build" location="build" />
+    <property name="dep" location="dep" />
+    <property name="mvn" location="mvn" />
     <target name="init">
-        <tstamp/>
+        <tstamp />
     </target>
     <target name="clean" depends="init">
-        <delete dir="${build}"/>
-        <mkdir dir="${build}"/>
+        <delete dir="${build}" />
+        <mkdir dir="${build}" />
     </target>
     <target name="compile" depends="clean" description="compiles the projects">
-	    <ant dir="dmot-core" antfile="build.xml" target="compile" inheritAll="true" inheritRefs="true" />
-	    <ant dir="dmot-servlet-javax" antfile="build.xml" target="compile" inheritAll="true" inheritRefs="true" />
+        <ant dir="dmot-core" antfile="build.xml" target="compile" inheritAll="true"
+            inheritRefs="true" />
+        <ant dir="dmot-servlet-javax" antfile="build.xml" target="compile" inheritAll="true"
+            inheritRefs="true" />
     </target>
     <target name="dist" depends="compile" description="generate the distribution">
         <!-- JARs -->
         <copy todir="${build}" flatten="true" verbose="yes">
             <fileset dir="dmot-core/target">
-                <include name="*.jar"/>
+                <include name="*.jar" />
             </fileset>
             <fileset dir="dmot-servlet-javax/target">
-                <include name="*.jar"/>
+                <include name="*.jar" />
             </fileset>
         </copy>
     </target>
+    <target name="example-demo" description="run the examples">
+        <echo
+            message="No example demos exist for the Java library yet; use the test target if you want to exercise the code." />
+    </target>
     <target name="test-compile" description="compile the unit tests">
-        <ant dir="dmot-core" antfile="build.xml" target="test-compile" inheritAll="true" inheritRefs="true" />
-        <ant dir="dmot-servlet-javax" antfile="build.xml" target="test-compile" inheritAll="true" inheritRefs="true" />
+        <ant dir="dmot-core" antfile="build.xml" target="test-compile" inheritAll="true"
+            inheritRefs="true" />
+        <ant dir="dmot-servlet-javax" antfile="build.xml" target="test-compile" inheritAll="true"
+            inheritRefs="true" />
     </target>
     <target name="test" description="run the unit tests">
-        <ant dir="dmot-servlet-javax" antfile="build.xml" target="test" inheritAll="true" inheritRefs="true" />
+        <ant dir="dmot-servlet-javax" antfile="build.xml" target="test" inheritAll="true"
+            inheritRefs="true" />
         <ant dir="dmot-core" antfile="build.xml" target="test" inheritAll="true" inheritRefs="true" />
     </target>
 </project>
