--- a/pkixwebadm/.env.example
+++ b/pkixwebadm/.env.example
@@ -12,6 +12,9 @@ PKIXWA_DEV_MODE=true
 PKIXWA_DATABASE_URL=sqlite:///var/data/app.db
 
 # Security
+PKIXWA_AUTH_METHOD=native
+PKIXWA_BOOTSTRAP_ADMIN_USER=not-the-real-bootstrap-admin-user-name
+PKIXWA_BOOTSTRAP_ADMIN_PASS_HASH=not-the-real-bootstrap-admin-password
 PKIXWA_SECRET_KEY=not-the-real-random-string-which-will-be-used-for-signing-cookies-and-tokens
 PKIXWA_SESSION_COOKIE_NAME=PKIXWA_SESSION
 PKIXWA_SESSION_TTL_SECONDS=86400
