switched from passlib to bcrypt and updated dependencies for apt and pip; logging to stdout and stderr; Pydantic v1/v2 dual support corrections; documentation updated and ASCII block diagrams converted to Mermaid

--- a/pkixwebadm/pyproject.toml
+++ b/pkixwebadm/pyproject.toml
@@ -2,9 +2,13 @@
 name = "pkixwebadm"
 version = "0.1.0"
 dependencies = [
+    "bcrypt",
     "fastapi",
     "jinja2",
-    "passlib",
     "pydantic-settings",
     "uvicorn[standard]",
 ]
+
+[tool.setuptools.packages.find]
+include = ["pkixwebadm*"]
+exclude = ["node_modules"]
