pkixwebadmin: refactoring, reorganization, and more unit tests for authentication; dependencies in dev.sh and pyproject.toml updated; documentation for sub-projects updated

--- a/libdmotservices/.gitignore
+++ b/libdmotservices/.gitignore
@@ -55,6 +55,7 @@ build/
 **/access.token
 **/connection.properties
 **/connection*.properties
+**/package-lock.json
 **/Thumbs.db*
 python/vendor
 js/dist/
