txrxcli: windows C# server and client; xunit unit tests; dual builds (Make, CMake); documentation

--- a/txrxcli/.gitignore
+++ b/txrxcli/.gitignore
@@ -46,3 +46,14 @@ dist/
 build/
 linux/build/
 windows/build/
+
+# .NET build outputs
+**/.dotnet
+**/bin/
+**/obj/
+.vs/
+.idea/
+.vscode/
+
+# NuGet caches (use a shared cache outside the repo)
+**/.nuget/
